feat: added email verification during account creation
